Import of IAN/Kwiki-Autoformat-0.02 from CPAN.
gitpan-cpan-distribution: Kwiki-Autoformat
gitpan-cpan-version:      0.02
gitpan-cpan-path:         IAN/Kwiki-Autoformat-0.02.tar.gz
gitpan-cpan-author:       IAN
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,4 +1,10 @@
 ---
+version: 0.02
+date:    Wed Jun 23 23:05:19 EDT 2004
+changes:
+- Now strips trailing newlines before </pre>
+
+---
 version: 0.01
 date:    Wed Jun 23 21:56:07 EDT 2004
 changes:
