--- a/Changes
+++ b/Changes
@@ -1,4 +1,10 @@
 ---
+version: 0.03
+date:    Sun Nov 13 21:28:42 EST 2005
+changes:
+- Adding pod.t and pod-coverage.t
+
+---
 version: 0.02
 date:    Wed Jun 23 23:05:19 EDT 2004
 changes:
